tudo traduzido pro ingles (sorta)

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <body>
   <form>
     <p>insira um número entre 0 e 999999</p>
-    <input id="campo-numero" type="number" name="numero">
-    <input id="btn-numero" type="submit" name="enviar" value="enviar">
+    <input id="field-number" type="number" name="numero">
+    <input id="btn-number" type="submit" name="enviar" value="enviar">
   </form>
-    <div class="retorno-extenso"></div>
+    <div class="return-written"></div>
   <script
         src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
